--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
 <body>
     <!-- <script src="./index.js"></script> -->
-    <!-- <script src="https://cdn.jsdelivr.net/gh/miguelFs86/jsTest/main/index.js"></script> -->
-    <script src="https://ghcdn.rawgit.org/MiguelFs86/jsTest/main/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/miguelFs86/jsTest/main/index.js"></script>
 </body>
 
 </html>
