--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <!-- <script src="./index.js"></script> -->
-    <script src="https://cdn.jsdelivr.net/gh/miguelFs86/jsTest@latest/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/miguelFs86/jsTest@0.3/index.js"></script>
 </body>
 
 </html>
